Zeeks/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> imports_opt globales_opt funciones
Rule 2     imports_opt -> imports
Rule 3     imports_opt -> <empty>
Rule 4     imports -> import_decl imports
Rule 5     imports -> import_decl
Rule 6     import_decl -> IMPORT CADENA PUNTOCOMA
Rule 7     globales_opt -> declaraciones
Rule 8     globales_opt -> <empty>
Rule 9     funciones -> funcion funciones
Rule 10    funciones -> funcion
Rule 11    funcion -> FN ID PAREN_A parametros_opt PAREN_C retorno_opt LLAVE_A instrucciones LLAVE_C
Rule 12    parametros_opt -> parametros
Rule 13    parametros_opt -> <empty>
Rule 14    parametros -> parametro COMA parametros
Rule 15    parametros -> parametro
Rule 16    parametro -> tipo ID
Rule 17    retorno_opt -> DOSPTOS tipo
Rule 18    retorno_opt -> <empty>
Rule 19    declaraciones -> declaracion declaraciones
Rule 20    declaraciones -> declaracion
Rule 21    declaracion -> tipo lista_vars PUNTOCOMA
Rule 22    declaracion -> CONST tipo ID ASIG expresion PUNTOCOMA
Rule 23    lista_vars -> var_inicializada mas_vars
Rule 24    var_inicializada -> ID
Rule 25    var_inicializada -> ID ASIG expresion
Rule 26    mas_vars -> COMA var_inicializada mas_vars
Rule 27    mas_vars -> <empty>
Rule 28    tipo -> TIPO
Rule 29    tipo -> TIPO COR_A tamanio_opt COR_C
Rule 30    tamanio_opt -> ENTERO
Rule 31    tamanio_opt -> <empty>
Rule 32    instrucciones -> instruccion instrucciones
Rule 33    instrucciones -> instruccion
Rule 34    instruccion -> declaracion
Rule 35    instruccion -> asignacion
Rule 36    instruccion -> llamada_funcion PUNTOCOMA
Rule 37    instruccion -> if_instr
Rule 38    instruccion -> while_instr
Rule 39    instruccion -> until_instr
Rule 40    instruccion -> for_instr
Rule 41    instruccion -> foreach_instr
Rule 42    instruccion -> do_while_instr
Rule 43    instruccion -> switch_instr
Rule 44    instruccion -> PASS PUNTOCOMA
Rule 45    instruccion -> CONTINUE PUNTOCOMA
Rule 46    instruccion -> BREAK PUNTOCOMA
Rule 47    instruccion -> RETURN expresion_opt PUNTOCOMA
Rule 48    instruccion -> inc_dec PUNTOCOMA
Rule 49    asignacion -> lvalue ASIG expresion PUNTOCOMA
Rule 50    lvalue -> ID
Rule 51    lvalue -> ID COR_A expresion COR_C
Rule 52    expresion_opt -> expresion
Rule 53    expresion_opt -> <empty>
Rule 54    llamada_funcion -> ID PAREN_A argumentos_opt PAREN_C
Rule 55    argumentos_opt -> argumentos
Rule 56    argumentos_opt -> <empty>
Rule 57    argumentos -> expresion COMA argumentos
Rule 58    argumentos -> expresion
Rule 59    if_instr -> IF COR_A expresion COR_C THEN instrucciones elif_opt else_opt FI
Rule 60    elif_opt -> elif_instrs
Rule 61    elif_opt -> <empty>
Rule 62    elif_instrs -> elif elif_instrs
Rule 63    elif_instrs -> elif
Rule 64    elif -> ELIF COR_A expresion COR_C THEN instrucciones
Rule 65    else_opt -> ELSE THEN instrucciones
Rule 66    else_opt -> <empty>
Rule 67    while_instr -> WHILE COR_A expresion COR_C DO instrucciones DONE
Rule 68    until_instr -> UNTIL COR_A expresion COR_C DO instrucciones DONE
Rule 69    do_while_instr -> DO instrucciones DONE WHILE COR_A expresion COR_C PUNTOCOMA
Rule 70    for_instr -> FOR PAREN_A asignacion_for_opt PUNTOCOMA condicion_opt PUNTOCOMA actualizacion_opt PAREN_C DO instrucciones DONE
Rule 71    asignacion_for_opt -> asignacion_no_pc
Rule 72    asignacion_for_opt -> TIPO lista_vars_for
Rule 73    asignacion_for_opt -> <empty>
Rule 74    asignacion_no_pc -> lvalue ASIG expresion
Rule 75    lista_vars_for -> inicializacion_var_for mas_vars_for
Rule 76    inicializacion_var_for -> ID ASIG expresion
Rule 77    mas_vars_for -> COMA inicializacion_var_for mas_vars_for
Rule 78    mas_vars_for -> <empty>
Rule 79    condicion_opt -> expresion
Rule 80    condicion_opt -> <empty>
Rule 81    actualizacion_opt -> asignacion_no_pc
Rule 82    actualizacion_opt -> inc_dec
Rule 83    actualizacion_opt -> <empty>
Rule 84    foreach_instr -> FOR TIPO ID IN expresion DO instrucciones DONE
Rule 85    switch_instr -> SWITCH PAREN_A expresion PAREN_C THEN case_list default_part FI
Rule 86    case_list -> case_clause case_list
Rule 87    case_list -> case_clause
Rule 88    case_clause -> CASE COR_A expresion COR_C DO instrucciones DONE
Rule 89    default_part -> DEFAULT DO instrucciones DONE
Rule 90    default_part -> <empty>
Rule 91    expresion -> expresion_or
Rule 92    expresion_or -> expresion_or OR expresion_and
Rule 93    expresion_or -> expresion_and
Rule 94    expresion_and -> expresion_and AND expresion_comp
Rule 95    expresion_and -> expresion_comp
Rule 96    expresion_comp -> expresion_rel IGUAL expresion_rel
Rule 97    expresion_comp -> expresion_rel DIF expresion_rel
Rule 98    expresion_comp -> expresion_rel
Rule 99    expresion_rel -> expresion_add MENOR expresion_add
Rule 100   expresion_rel -> expresion_add MENOR_IG expresion_add
Rule 101   expresion_rel -> expresion_add MAYOR expresion_add
Rule 102   expresion_rel -> expresion_add MAYOR_IG expresion_add
Rule 103   expresion_rel -> expresion_add
Rule 104   expresion_add -> expresion_add MAS expresion_mult
Rule 105   expresion_add -> expresion_add MENOS expresion_mult
Rule 106   expresion_add -> expresion_mult
Rule 107   expresion_mult -> expresion_mult MUL expresion_unaria
Rule 108   expresion_mult -> expresion_mult DIV expresion_unaria
Rule 109   expresion_mult -> expresion_mult MOD expresion_unaria
Rule 110   expresion_mult -> expresion_unaria
Rule 111   expresion_unaria -> MAS expresion_primaria
Rule 112   expresion_unaria -> MENOS expresion_primaria
Rule 113   expresion_unaria -> NOT expresion_primaria
Rule 114   expresion_unaria -> expresion_primaria
Rule 115   expresion_primaria -> termino
Rule 116   expresion_primaria -> PAREN_A expresion PAREN_C
Rule 117   termino -> llamada_funcion
Rule 118   termino -> lvalue
Rule 119   termino -> ENTERO
Rule 120   termino -> FLOTANTE
Rule 121   termino -> CADENA
Rule 122   termino -> CARACTER
Rule 123   termino -> TRUE
Rule 124   termino -> FALSE
Rule 125   termino -> inc_dec
Rule 126   termino -> array_literal
Rule 127   array_literal -> COR_A array_items_opt COR_C
Rule 128   array_items_opt -> expresion mas_array_items_opt
Rule 129   array_items_opt -> <empty>
Rule 130   mas_array_items_opt -> COMA expresion mas_array_items_opt
Rule 131   mas_array_items_opt -> <empty>
Rule 132   inc_dec -> ID DEC
Rule 133   inc_dec -> ID INC

Terminals, with rules where they appear

AND                  : 94
ASIG                 : 22 25 49 74 76
BREAK                : 46
CADENA               : 6 121
CARACTER             : 122
CASE                 : 88
COMA                 : 14 26 57 77 130
CONST                : 22
CONTINUE             : 45
COR_A                : 29 51 59 64 67 68 69 88 127
COR_C                : 29 51 59 64 67 68 69 88 127
DEC                  : 132
DEFAULT              : 89
DIF                  : 97
DIV                  : 108
DO                   : 67 68 69 70 84 88 89
DONE                 : 67 68 69 70 84 88 89
DOSPTOS              : 17
ELIF                 : 64
ELSE                 : 65
ENTERO               : 30 119
FALSE                : 124
FI                   : 59 85
FLOTANTE             : 120
FN                   : 11
FOR                  : 70 84
ID                   : 11 16 22 24 25 50 51 54 76 84 132 133
IF                   : 59
IGUAL                : 96
IMPORT               : 6
IN                   : 84
INC                  : 133
LLAVE_A              : 11
LLAVE_C              : 11
MAS                  : 104 111
MAYOR                : 101
MAYOR_IG             : 102
MENOR                : 99
MENOR_IG             : 100
MENOS                : 105 112
MOD                  : 109
MUL                  : 107
NOT                  : 113
OR                   : 92
PAREN_A              : 11 54 70 85 116
PAREN_C              : 11 54 70 85 116
PASS                 : 44
PUNTOCOMA            : 6 21 22 36 44 45 46 47 48 49 69 70 70
RETURN               : 47
SWITCH               : 85
THEN                 : 59 64 65 85
TIPO                 : 28 29 72 84
TRUE                 : 123
UNTIL                : 68
WHILE                : 67 69
error                : 

Nonterminals, with rules where they appear

actualizacion_opt    : 70
argumentos           : 55 57
argumentos_opt       : 54
array_items_opt      : 127
array_literal        : 126
asignacion           : 35
asignacion_for_opt   : 70
asignacion_no_pc     : 71 81
case_clause          : 86 87
case_list            : 85 86
condicion_opt        : 70
declaracion          : 19 20 34
declaraciones        : 7 19
default_part         : 85
do_while_instr       : 42
elif                 : 62 63
elif_instrs          : 60 62
elif_opt             : 59
else_opt             : 59
expresion            : 22 25 49 51 52 57 58 59 64 67 68 69 74 76 79 84 85 88 116 128 130
expresion_add        : 99 99 100 100 101 101 102 102 103 104 105
expresion_and        : 92 93 94
expresion_comp       : 94 95
expresion_mult       : 104 105 106 107 108 109
expresion_opt        : 47
expresion_or         : 91 92
expresion_primaria   : 111 112 113 114
expresion_rel        : 96 96 97 97 98
expresion_unaria     : 107 108 109 110
for_instr            : 40
foreach_instr        : 41
funcion              : 9 10
funciones            : 1 9
globales_opt         : 1
if_instr             : 37
import_decl          : 4 5
imports              : 2 4
imports_opt          : 1
inc_dec              : 48 82 125
inicializacion_var_for : 75 77
instruccion          : 32 33
instrucciones        : 11 32 59 64 65 67 68 69 70 84 88 89
lista_vars           : 21
lista_vars_for       : 72
llamada_funcion      : 36 117
lvalue               : 49 74 118
mas_array_items_opt  : 128 130
mas_vars             : 23 26
mas_vars_for         : 75 77
parametro            : 14 15
parametros           : 12 14
parametros_opt       : 11
programa             : 0
retorno_opt          : 11
switch_instr         : 43
tamanio_opt          : 29
termino              : 115
tipo                 : 16 17 21 22
until_instr          : 39
var_inicializada     : 23 26
while_instr          : 38

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . imports_opt globales_opt funciones
    (2) imports_opt -> . imports
    (3) imports_opt -> .
    (4) imports -> . import_decl imports
    (5) imports -> . import_decl
    (6) import_decl -> . IMPORT CADENA PUNTOCOMA

    CONST           reduce using rule 3 (imports_opt -> .)
    TIPO            reduce using rule 3 (imports_opt -> .)
    FN              reduce using rule 3 (imports_opt -> .)
    IMPORT          shift and go to state 5

    programa                       shift and go to state 1
    imports_opt                    shift and go to state 2
    imports                        shift and go to state 3
    import_decl                    shift and go to state 4

state 1

    (0) S' -> programa .



state 2

    (1) programa -> imports_opt . globales_opt funciones
    (7) globales_opt -> . declaraciones
    (8) globales_opt -> .
    (19) declaraciones -> . declaracion declaraciones
    (20) declaraciones -> . declaracion
    (21) declaracion -> . tipo lista_vars PUNTOCOMA
    (22) declaracion -> . CONST tipo ID ASIG expresion PUNTOCOMA
    (28) tipo -> . TIPO
    (29) tipo -> . TIPO COR_A tamanio_opt COR_C

    FN              reduce using rule 8 (globales_opt -> .)
    CONST           shift and go to state 10
    TIPO            shift and go to state 11

    globales_opt                   shift and go to state 6
    declaraciones                  shift and go to state 7
    declaracion                    shift and go to state 8
    tipo                           shift and go to state 9

state 3

    (2) imports_opt -> imports .

    CONST           reduce using rule 2 (imports_opt -> imports .)
    TIPO            reduce using rule 2 (imports_opt -> imports .)
    FN              reduce using rule 2 (imports_opt -> imports .)


state 4

    (4) imports -> import_decl . imports
    (5) imports -> import_decl .
    (4) imports -> . import_decl imports
    (5) imports -> . import_decl
    (6) import_decl -> . IMPORT CADENA PUNTOCOMA

    CONST           reduce using rule 5 (imports -> import_decl .)
    TIPO            reduce using rule 5 (imports -> import_decl .)
    FN              reduce using rule 5 (imports -> import_decl .)
    IMPORT          shift and go to state 5

    import_decl                    shift and go to state 4
    imports                        shift and go to state 12

state 5

    (6) import_decl -> IMPORT . CADENA PUNTOCOMA

    CADENA          shift and go to state 13


state 6

    (1) programa -> imports_opt globales_opt . funciones
    (9) funciones -> . funcion funciones
    (10) funciones -> . funcion
    (11) funcion -> . FN ID PAREN_A parametros_opt PAREN_C retorno_opt LLAVE_A instrucciones LLAVE_C

    FN              shift and go to state 16

    funciones                      shift and go to state 14
    funcion                        shift and go to state 15

state 7

    (7) globales_opt -> declaraciones .

    FN              reduce using rule 7 (globales_opt -> declaraciones .)


state 8

    (19) declaraciones -> declaracion . declaraciones
    (20) declaraciones -> declaracion .
    (19) declaraciones -> . declaracion declaraciones
    (20) declaraciones -> . declaracion
    (21) declaracion -> . tipo lista_vars PUNTOCOMA
    (22) declaracion -> . CONST tipo ID ASIG expresion PUNTOCOMA
    (28) tipo -> . TIPO
    (29) tipo -> . TIPO COR_A tamanio_opt COR_C

    FN              reduce using rule 20 (declaraciones -> declaracion .)
    CONST           shift and go to state 10
    TIPO            shift and go to state 11

    declaracion                    shift and go to state 8
    declaraciones                  shift and go to state 17
    tipo                           shift and go to state 9

state 9

    (21) declaracion -> tipo . lista_vars PUNTOCOMA
    (23) lista_vars -> . var_inicializada mas_vars
    (24) var_inicializada -> . ID
    (25) var_inicializada -> . ID ASIG expresion

    ID              shift and go to state 20

    lista_vars                     shift and go to state 18
    var_inicializada               shift and go to state 19

state 10

    (22) declaracion -> CONST . tipo ID ASIG expresion PUNTOCOMA
    (28) tipo -> . TIPO
    (29) tipo -> . TIPO COR_A tamanio_opt COR_C

    TIPO            shift and go to state 11

    tipo                           shift and go to state 21

state 11

    (28) tipo -> TIPO .
    (29) tipo -> TIPO . COR_A tamanio_opt COR_C

    ID              reduce using rule 28 (tipo -> TIPO .)
    LLAVE_A         reduce using rule 28 (tipo -> TIPO .)
    COR_A           shift and go to state 22


state 12

    (4) imports -> import_decl imports .

    CONST           reduce using rule 4 (imports -> import_decl imports .)
    TIPO            reduce using rule 4 (imports -> import_decl imports .)
    FN              reduce using rule 4 (imports -> import_decl imports .)


state 13

    (6) import_decl -> IMPORT CADENA . PUNTOCOMA

    PUNTOCOMA       shift and go to state 23


state 14

    (1) programa -> imports_opt globales_opt funciones .

    $end            reduce using rule 1 (programa -> imports_opt globales_opt funciones .)


state 15

    (9) funciones -> funcion . funciones
    (10) funciones -> funcion .
    (9) funciones -> . funcion funciones
    (10) funciones -> . funcion
    (11) funcion -> . FN ID PAREN_A parametros_opt PAREN_C retorno_opt LLAVE_A instrucciones LLAVE_C

    $end            reduce using rule 10 (funciones -> funcion .)
    FN              shift and go to state 16

    funcion                        shift and go to state 15
    funciones                      shift and go to state 24

state 16

    (11) funcion -> FN . ID PAREN_A parametros_opt PAREN_C retorno_opt LLAVE_A instrucciones LLAVE_C

    ID              shift and go to state 25


state 17

    (19) declaraciones -> declaracion declaraciones .

    FN              reduce using rule 19 (declaraciones -> declaracion declaraciones .)


state 18

    (21) declaracion -> tipo lista_vars . PUNTOCOMA

    PUNTOCOMA       shift and go to state 26


state 19

    (23) lista_vars -> var_inicializada . mas_vars
    (26) mas_vars -> . COMA var_inicializada mas_vars
    (27) mas_vars -> .

    COMA            shift and go to state 28
    PUNTOCOMA       reduce using rule 27 (mas_vars -> .)

    mas_vars                       shift and go to state 27

state 20

    (24) var_inicializada -> ID .
    (25) var_inicializada -> ID . ASIG expresion

    COMA            reduce using rule 24 (var_inicializada -> ID .)
    PUNTOCOMA       reduce using rule 24 (var_inicializada -> ID .)
    ASIG            shift and go to state 29


state 21

    (22) declaracion -> CONST tipo . ID ASIG expresion PUNTOCOMA

    ID              shift and go to state 30


state 22

    (29) tipo -> TIPO COR_A . tamanio_opt COR_C
    (30) tamanio_opt -> . ENTERO
    (31) tamanio_opt -> .

    ENTERO          shift and go to state 32
    COR_C           reduce using rule 31 (tamanio_opt -> .)

    tamanio_opt                    shift and go to state 31

state 23

    (6) import_decl -> IMPORT CADENA PUNTOCOMA .

    IMPORT          reduce using rule 6 (import_decl -> IMPORT CADENA PUNTOCOMA .)
    CONST           reduce using rule 6 (import_decl -> IMPORT CADENA PUNTOCOMA .)
    TIPO            reduce using rule 6 (import_decl -> IMPORT CADENA PUNTOCOMA .)
    FN              reduce using rule 6 (import_decl -> IMPORT CADENA PUNTOCOMA .)


state 24

    (9) funciones -> funcion funciones .

    $end            reduce using rule 9 (funciones -> funcion funciones .)


state 25

    (11) funcion -> FN ID . PAREN_A parametros_opt PAREN_C retorno_opt LLAVE_A instrucciones LLAVE_C

    PAREN_A         shift and go to state 33


state 26

    (21) declaracion -> tipo lista_vars PUNTOCOMA .

    CONST           reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    TIPO            reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    FN              reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    PASS            reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    CONTINUE        reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    BREAK           reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    RETURN          reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    ID              reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    IF              reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    WHILE           reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    UNTIL           reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    FOR             reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    DO              reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    SWITCH          reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    LLAVE_C         reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    DONE            reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    ELIF            reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    ELSE            reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)
    FI              reduce using rule 21 (declaracion -> tipo lista_vars PUNTOCOMA .)


state 27

    (23) lista_vars -> var_inicializada mas_vars .

    PUNTOCOMA       reduce using rule 23 (lista_vars -> var_inicializada mas_vars .)


state 28

    (26) mas_vars -> COMA . var_inicializada mas_vars
    (24) var_inicializada -> . ID
    (25) var_inicializada -> . ID ASIG expresion

    ID              shift and go to state 20

    var_inicializada               shift and go to state 34

state 29

    (25) var_inicializada -> ID ASIG . expresion
    (91) expresion -> . expresion_or
    (92) expresion_or -> . expresion_or OR expresion_and
    (93) expresion_or -> . expresion_and
    (94) expresion_and -> . expresion_and AND expresion_comp
    (95) expresion_and -> . expresion_comp
    (96) expresion_comp -> . expresion_rel IGUAL expresion_rel
    (97) expresion_comp -> . expresion_rel DIF expresion_rel
    (98) expresion_comp -> . expresion_rel
    (99) expresion_rel -> . expresion_add MENOR expresion_add
    (100) expresion_rel -> . expresion_add MENOR_IG expresion_add
    (101) expresion_rel -> . expresion_add MAYOR expresion_add
    (102) expresion_rel -> . expresion_add MAYOR_IG expresion_add
    (103) expresion_rel -> . expresion_add
    (104) expresion_add -> . expresion_add MAS expresion_mult
    (105) expresion_add -> . expresion_add MENOS expresion_mult
    (106) expresion_add -> . expresion_mult
    (107) expresion_mult -> . expresion_mult MUL expresion_unaria
    (108) expresion_mult -> . expresion_mult DIV expresion_unaria
    (109) expresion_mult -> . expresion_mult MOD expresion_unaria
    (110) expresion_mult -> . expresion_unaria
    (111) expresion_unaria -> . MAS expresion_primaria
    (112) expresion_unaria -> . MENOS expresion_primaria
    (113) expresion_unaria -> . NOT expresion_primaria
    (114) expresion_unaria -> . expresion_primaria
    (115) expresion_primaria -> . termino
    (116) expresion_primaria -> . PAREN_A expresion PAREN_C
    (117) termino -> . llamada_funcion
    (118) termino -> . lvalue
    (119) termino -> . ENTERO
    (120) termino -> . FLOTANTE
    (121) termino -> . CADENA
    (122) termino -> . CARACTER
    (123) termino -> . TRUE
    (124) termino -> . FALSE
    (125) termino -> . inc_dec
    (126) termino -> . array_literal
    (54) llamada_funcion -> . ID PAREN_A argumentos_opt PAREN_C
    (50) lvalue -> . ID
    (51) lvalue -> . ID COR_A expresion COR_C
    (132) inc_dec -> . ID DEC
    (133) inc_dec -> . ID INC
    (127) array_literal -> . COR_A array_items_opt COR_C

    MAS             shift and go to state 42
    MENOS           shift and go to state 44
    NOT             shift and go to state 47
    PAREN_A         shift and go to state 49
    ENTERO          shift and go to state 52
    FLOTANTE        shift and go to state 53
    CADENA          shift and go to state 54
    CARACTER        shift and go to state 55
    TRUE            shift and go to state 56
    FALSE           shift and go to state 57
    ID              shift and go to state 35
    COR_A           shift and go to state 60

    expresion                      shift and go to state 36
    expresion_or                   shift and go to state 37
    expresion_and                  shift and go to state 38
    expresion_comp                 shift and go to state 39
    expresion_rel                  shift and go to state 40
    expresion_add                  shift and go to state 41
    expresion_mult                 shift and go to state 43
    expresion_unaria               shift and go to state 45
    expresion_primaria             shift and go to state 46
    termino                        shift and go to state 48
    llamada_funcion                shift and go to state 50
    lvalue                         shift and go to state 51
    inc_dec                        shift and go to state 58
    array_literal                  shift and go to state 59

state 30

    (22) declaracion -> CONST tipo ID . ASIG expresion PUNTOCOMA

    ASIG            shift and go to state 61


state 31

    (29) tipo -> TIPO COR_A tamanio_opt . COR_C

    COR_C           shift and go to state 62


state 32

    (30) tamanio_opt -> ENTERO .

    COR_C           reduce using rule 30 (tamanio_opt -> ENTERO .)


state 33

    (11) funcion -> FN ID PAREN_A . parametros_opt PAREN_C retorno_opt LLAVE_A instrucciones LLAVE_C
    (12) parametros_opt -> . parametros
    (13) parametros_opt -> .
    (14) parametros -> . parametro COMA parametros
    (15) parametros -> . parametro
    (16) parametro -> . tipo ID
    (28) tipo -> . TIPO
    (29) tipo -> . TIPO COR_A tamanio_opt COR_C

    PAREN_C         reduce using rule 13 (parametros_opt -> .)
    TIPO            shift and go to state 11

    parametros_opt                 shift and go to state 63
    parametros                     shift and go to state 64
    parametro                      shift and go to state 65
    tipo                           shift and go to state 66

state 34

    (26) mas_vars -> COMA var_inicializada . mas_vars
    (26) mas_vars -> . COMA var_inicializada mas_vars
    (27) mas_vars -> .

    COMA            shift and go to state 28
    PUNTOCOMA       reduce using rule 27 (mas_vars -> .)

    mas_vars                       shift and go to state 67

state 35

    (54) llamada_funcion -> ID . PAREN_A argumentos_opt PAREN_C
    (50) lvalue -> ID .
    (51) lvalue -> ID . COR_A expresion COR_C
    (132) inc_dec -> ID . DEC
    (133) inc_dec -> ID . INC

    PAREN_A         shift and go to state 68
    MUL             reduce using rule 50 (lvalue -> ID .)
    DIV             reduce using rule 50 (lvalue -> ID .)
    MOD             reduce using rule 50 (lvalue -> ID .)
    MENOR           reduce using rule 50 (lvalue -> ID .)
    MENOR_IG        reduce using rule 50 (lvalue -> ID .)
    MAYOR           reduce using rule 50 (lvalue -> ID .)
    MAYOR_IG        reduce using rule 50 (lvalue -> ID .)
    MAS             reduce using rule 50 (lvalue -> ID .)
    MENOS           reduce using rule 50 (lvalue -> ID .)
    IGUAL           reduce using rule 50 (lvalue -> ID .)
    DIF             reduce using rule 50 (lvalue -> ID .)
    AND             reduce using rule 50 (lvalue -> ID .)
    OR              reduce using rule 50 (lvalue -> ID .)
    COMA            reduce using rule 50 (lvalue -> ID .)
    PUNTOCOMA       reduce using rule 50 (lvalue -> ID .)
    PAREN_C         reduce using rule 50 (lvalue -> ID .)
    COR_C           reduce using rule 50 (lvalue -> ID .)
    DO              reduce using rule 50 (lvalue -> ID .)
    COR_A           shift and go to state 69
    DEC             shift and go to state 70
    INC             shift and go to state 71


state 36

    (25) var_inicializada -> ID ASIG expresion .

    COMA            reduce using rule 25 (var_inicializada -> ID ASIG expresion .)
    PUNTOCOMA       reduce using rule 25 (var_inicializada -> ID ASIG expresion .)


state 37

    (91) expresion -> expresion_or .
    (92) expresion_or -> expresion_or . OR expresion_and

    COMA            reduce using rule 91 (expresion -> expresion_or .)
    PUNTOCOMA       reduce using rule 91 (expresion -> expresion_or .)
    PAREN_C         reduce using rule 91 (expresion -> expresion_or .)
    COR_C           reduce using rule 91 (expresion -> expresion_or .)
    DO              reduce using rule 91 (expresion -> expresion_or .)
    OR              shift and go to state 72


state 38

    (93) expresion_or -> expresion_and .
    (94) expresion_and -> expresion_and . AND expresion_comp

    OR              reduce using rule 93 (expresion_or -> expresion_and .)
    COMA            reduce using rule 93 (expresion_or -> expresion_and .)
    PUNTOCOMA       reduce using rule 93 (expresion_or -> expresion_and .)
    PAREN_C         reduce using rule 93 (expresion_or -> expresion_and .)
    COR_C           reduce using rule 93 (expresion_or -> expresion_and .)
    DO              reduce using rule 93 (expresion_or -> expresion_and .)
    AND             shift and go to state 73


state 39

    (95) expresion_and -> expresion_comp .

    AND             reduce using rule 95 (expresion_and -> expresion_comp .)
    OR              reduce using rule 95 (expresion_and -> expresion_comp .)
    COMA            reduce using rule 95 (expresion_and -> expresion_comp .)
    PUNTOCOMA       reduce using rule 95 (expresion_and -> expresion_comp .)
    PAREN_C         reduce using rule 95 (expresion_and -> expresion_comp .)
    COR_C           reduce using rule 95 (expresion_and -> expresion_comp .)
    DO              reduce using rule 95 (expresion_and -> expresion_comp .)


state 40

    (96) expresion_comp -> expresion_rel . IGUAL expresion_rel
    (97) expresion_comp -> expresion_rel . DIF expresion_rel
    (98) expresion_comp -> expresion_rel .

    IGUAL           shift and go to state 74
    DIF             shift and go to state 75
    AND             reduce using rule 98 (expresion_comp -> expresion_rel .)
    OR              reduce using rule 98 (expresion_comp -> expresion_rel .)
    COMA            reduce using rule 98 (expresion_comp -> expresion_rel .)
    PUNTOCOMA       reduce using rule 98 (expresion_comp -> expresion_rel .)
    PAREN_C         reduce using rule 98 (expresion_comp -> expresion_rel .)
    COR_C           reduce using rule 98 (expresion_comp -> expresion_rel .)
    DO              reduce using rule 98 (expresion_comp -> expresion_rel .)


state 41

    (99) expresion_rel -> expresion_add . MENOR expresion_add
    (100) expresion_rel -> expresion_add . MENOR_IG expresion_add
    (101) expresion_rel -> expresion_add . MAYOR expresion_add
    (102) expresion_rel -> expresion_add . MAYOR_IG expresion_add
    (103) expresion_rel -> expresion_add .
    (104) expresion_add -> expresion_add . MAS expresion_mult
    (105) expresion_add -> expresion_add . MENOS expresion_mult

    MENOR           shift and go to state 76
    MENOR_IG        shift and go to state 77
    MAYOR           shift and go to state 78
    MAYOR_IG        shift and go to state 79
    IGUAL           reduce using rule 103 (expresion_rel -> expresion_add .)
    DIF             reduce using rule 103 (expresion_rel -> expresion_add .)
    AND             reduce using rule 103 (expresion_rel -> expresion_add .)
    OR              reduce using rule 103 (expresion_rel -> expresion_add .)
    COMA            reduce using rule 103 (expresion_rel -> expresion_add .)
    PUNTOCOMA       reduce using rule 103 (expresion_rel -> expresion_add .)
    PAREN_C         reduce using rule 103 (expresion_rel -> expresion_add .)
    COR_C           reduce using rule 103 (expresion_rel -> expresion_add .)
    DO              reduce using rule 103 (expresion_rel -> expresion_add .)
    MAS             shift and go to state 80
    MENOS           shift and go to state 81


state 42

    (111) expresion_unaria -> MAS . expresion_primaria
    (115) expresion_primaria -> . termino
    (116) expresion_primaria -> . PAREN_A expresion PAREN_C
    (117) termino -> . llamada_funcion
    (118) termino -> . lvalue
    (119) termino -> . ENTERO
    (120) termino -> . FLOTANTE
    (121) termino -> . CADENA
    (122) termino -> . CARACTER
    (123) termino -> . TRUE
    (124) termino -> . FALSE
    (125) termino -> . inc_dec
    (126) termino -> . array_literal
    (54) llamada_funcion -> . ID PAREN_A argumentos_opt PAREN_C
    (50) lvalue -> . ID
    (51) lvalue -> . ID COR_A expresion COR_C
    (132) inc_dec -> . ID DEC
    (133) inc_dec -> . ID INC
    (127) array_literal -> . COR_A array_items_opt COR_C

    PAREN_A         shift and go to state 49
    ENTERO          shift and go to state 52
    FLOTANTE        shift and go to state 53
    CADENA          shift and go to state 54
    CARACTER        shift and go to state 55
    TRUE            shift and go to state 56
    FALSE           shift and go to state 57
    ID              shift and go to state 35
    COR_A           shift and go to state 60

    expresion_primaria             shift and go to state 82
    termino                        shift and go to state 48
    llamada_funcion                shift and go to state 50
    lvalue                         shift and go to state 51
    inc_dec                        shift and go to state 58
    array_literal                  shift and go to state 59

state 43

    (106) expresion_add -> expresion_mult .
    (107) expresion_mult -> expresion_mult . MUL expresion_unaria
    (108) expresion_mult -> expresion_mult . DIV expresion_unaria
    (109) expresion_mult -> expresion_mult . MOD expresion_unaria

    MENOR           reduce using rule 106 (expresion_add -> expresion_mult .)
    MENOR_IG        reduce using rule 106 (expresion_add -> expresion_mult .)
    MAYOR           reduce using rule 106 (expresion_add -> expresion_mult .)
    MAYOR_IG        reduce using rule 106 (expresion_add -> expresion_mult .)
    MAS             reduce using rule 106 (expresion_add -> expresion_mult .)
    MENOS           reduce using rule 106 (expresion_add -> expresion_mult .)
    IGUAL           reduce using rule 106 (expresion_add -> expresion_mult .)
    DIF             reduce using rule 106 (expresion_add -> expresion_mult .)
    AND             reduce using rule 106 (expresion_add -> expresion_mult .)
    OR              reduce using rule 106 (expresion_add -> expresion_mult .)
    COMA            reduce using rule 106 (expresion_add -> expresion_mult .)
    PUNTOCOMA       reduce using rule 106 (expresion_add -> expresion_mult .)
    PAREN_C         reduce using rule 106 (expresion_add -> expresion_mult .)
    COR_C           reduce using rule 106 (expresion_add -> expresion_mult .)
    DO              reduce using rule 106 (expresion_add -> expresion_mult .)
    MUL             shift and go to state 83
    DIV             shift and go to state 84
    MOD             shift and go to state 85


state 44
